name:                htetris
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Haukur Rosinkranz & Christophe Vilain
maintainer:          hauxir@gmail.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable htetris
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base, ncurses, random
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test-htetris
  type:               exitcode-stdio-1.0
  main-is:            TestGrid.hs
  hs-source-dirs:     test, src
  build-depends:      base, ncurses, random,
                      test-framework,
                      test-framework-hunit,
                      HUnit
  default-language:    Haskell2010
